Implemented the progress bars for the both the quiz modes

--- a/app/src/main/res/layout/activity_multi_choice_quiz.xml
+++ b/app/src/main/res/layout/activity_multi_choice_quiz.xml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mc_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="24dp"
+    android:background="@color/blue">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/question_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
+        android:text="Question 1 of 10"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:layout_alignParentTop="true" />
+
+    <ProgressBar
+        android:id="@+id/quiz_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:layout_below="@id/question_number"
+        android:layout_marginTop="16dp"
+        android:progress="0"
+        android:max="10"
+        android:progressDrawable="@drawable/progress_bar_drawable" />
+
+    <TextView
+        android:id="@+id/mc_question"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sample Question?"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:gravity="center"
-        android:text="This is the multiple choice quiz" />
-</LinearLayout>
+        android:layout_below="@id/question_number"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp" />
+
+    <GridLayout
+        android:id="@+id/options_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mc_question"
+        android:layout_marginTop="48dp"
+        android:layout_centerHorizontal="true"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:alignmentMode="alignMargins"
+        android:columnOrderPreserved="false"
+        android:useDefaultMargins="true">
+
+        <Button
+            android:id="@+id/option_a"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="Option A"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/option_b"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="Option B"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/option_c"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="Option C"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/option_d"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="1"
+            android:text="Option D"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@android:color/white" />
+    </GridLayout>
+</RelativeLayout>
