Added the coloring and styling for both the quiz modes

--- a/app/src/main/res/layout/activity_multi_choice_quiz.xml
+++ b/app/src/main/res/layout/activity_multi_choice_quiz.xml
@@ -118,4 +118,16 @@
             android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white" />
     </GridLayout>
+    <TextView
+        android:id="@+id/feedback_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_below="@id/options_container"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/white" />
+
 </RelativeLayout>
