--- a/app/src/main/res/layout/activity_true_false_quiz.xml
+++ b/app/src/main/res/layout/activity_true_false_quiz.xml
@@ -93,8 +93,19 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="False"
-            android:backgroundTint="@android:color/holo_red_light"
+            android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white"
             android:layout_marginStart="8dp"/>
     </LinearLayout>
+    <TextView
+        android:id="@+id/feedback_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/button_container"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
