--- a/app/src/main/res/layout/activity_multi_choice_quiz.xml
+++ b/app/src/main/res/layout/activity_multi_choice_quiz.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mc_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="24dp"
-    android:background="@color/blue">
+    android:background="@color/blue"
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/question_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Question 1 of 10"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:layout_alignParentTop="true" />
+        android:text="Question 1 of 10"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <ProgressBar
         android:id="@+id/quiz_progress"
@@ -24,8 +25,8 @@
         android:layout_height="12dp"
         android:layout_below="@id/question_number"
         android:layout_marginTop="16dp"
-        android:progress="0"
         android:max="10"
+        android:progress="0"
         android:progressDrawable="@drawable/progress_bar_drawable" />
 
     <LinearLayout
@@ -34,24 +35,24 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/quiz_progress"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/restart_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Restart"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@android:color/holo_green_dark"
+            android:background="@drawable/button_rounded_restart"
+            android:text="Restart"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/end_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_rounded_abort"
             android:text="End Quiz"
-            android:backgroundTint="@android:color/holo_red_dark"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
@@ -60,74 +61,85 @@
         android:id="@+id/mc_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/question_number"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
+        android:gravity="center"
         android:text="Sample Question?"
         android:textColor="@android:color/white"
         android:textSize="22sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_below="@id/question_number"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp" />
+        android:textStyle="bold" />
 
     <GridLayout
         android:id="@+id/options_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/mc_question"
-        android:layout_marginTop="18dp"
         android:layout_centerHorizontal="true"
-        android:columnCount="2"
-        android:rowCount="2"
+        android:layout_marginTop="18dp"
         android:alignmentMode="alignMargins"
+        android:columnCount="2"
         android:columnOrderPreserved="false"
+        android:rowCount="2"
         android:useDefaultMargins="true">
 
         <Button
             android:id="@+id/option_a"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
+            android:background="@drawable/button_rounded"
             android:text="Option A"
-            android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/option_b"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
+            android:background="@drawable/button_rounded"
             android:text="Option B"
-            android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/option_c"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
+            android:background="@drawable/button_rounded"
             android:text="Option C"
-            android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/option_d"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
+            android:background="@drawable/button_rounded"
             android:text="Option D"
-            android:backgroundTint="@color/teal_200"
             android:textColor="@android:color/white" />
     </GridLayout>
+
     <TextView
         android:id="@+id/feedback_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_below="@id/options_container"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/white" />
+        android:text=""
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/feedback_text"
+        android:layout_alignParentEnd="true"
+        android:paddingHorizontal="15dp"
+        android:background="@drawable/button_rounded_next"
+        android:text="Next" />
 
 </RelativeLayout>
