--- a/app/src/main/res/layout/activity_true_false_quiz.xml
+++ b/app/src/main/res/layout/activity_true_false_quiz.xml
@@ -42,7 +42,8 @@
             android:layout_height="wrap_content"
             android:text="Restart"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="@android:color/holo_green_dark"
+            android:background="@drawable/button_rounded_restart"
+            android:paddingHorizontal="15dp"
             android:textColor="@android:color/white" />
 
         <Button
@@ -50,7 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="End Quiz"
-            android:backgroundTint="@android:color/holo_red_dark"
+            android:background="@drawable/button_rounded_abort"
+            android:paddingHorizontal="15dp"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
@@ -85,7 +87,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="True"
-            android:backgroundTint="@color/teal_200"
+            android:background="@drawable/button_rounded"
             android:textColor="@android:color/white"
             android:layout_marginEnd="8dp"/>
 
@@ -95,7 +97,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="False"
-            android:backgroundTint="@color/teal_200"
+            android:background="@drawable/button_rounded"
             android:textColor="@android:color/white"
             android:layout_marginStart="8dp"/>
     </LinearLayout>
@@ -110,4 +112,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/white" />
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/feedback_text"
+        android:layout_alignParentEnd="true"
+        android:paddingHorizontal="15dp"
+        android:background="@drawable/button_rounded_next"
+        android:text="Next" />
 </RelativeLayout>
